final edit prototype 🔖

--- a/exhibitors.html
+++ b/exhibitors.html
@@ -27,13 +27,18 @@
                     <a class="nav-link text-light" href="exhibitors.html">Aussteller</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link text-light" href="layout.html">Hallenplan </a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link text-light" href="https://lehrmesse.ch">Lehrmesse </a>
                 </li>
+                
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <!--
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                </form> -->
         </div>
     </nav>
 
@@ -56,17 +61,17 @@
             <table class="table table-hover m-5">
                 <thead>
                     <tr>
-                        <th class="col-xl-2 table-text">Lehrbetrieb</th>
-                        <th class="col-xl-5"></th>
-                        <th class="col-xl-5 table-text ">Ort</th>
+                        <th class=" table-text">Lehrbetrieb</th>
+                        <th class=""></th>
+                        <th class=" table-text ">Ort</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     <tr onclick="window.location='profilepro.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
                     </tr>
 
                 </tbody>
@@ -75,157 +80,97 @@
             <table class="table table-hover m-5">
                 <thead>
                     <tr >
-                        <th class="col-xl-2 table-text">Lehrbetrieb</th>
-                        <th class="col-xl-5"></th>
-                        <th class="col-xl-5 table-text ">Ort</th>
+                        <th class=" table-text">Lehrbetrieb</th>
+                        <th class=""></th>
+                        <th class=" table-text ">Ort</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class="table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class="table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class="table-text">8606 Greifensee</td>
 
                     </tr>
 
                 </tbody>
             </table>
-            <!-- Partners -->
-            <h2 class="m-5"> Partner</h2>
-            <table class="table table-hover m-5">
-                <thead>
-                    <tr >
-                        <th class="col-xl-2 table-text">Lehrbetrieb</th>
-                        <th class="col-xl-5"></th>
-                        <th class="col-xl-5 table-text ">Ort</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
-
-                    </tr>
-                </tbody>
-            </table>
+            
             <!-- alle Aussteller -->
             <h2 class="m-5"> Restliche Aussteller </h2>
             <table class="table table-hover m-5">
                 <thead>
                     <tr >
-                        <th class="col-xl-2 table-text">Lehrbetrieb</th>
-                        <th class="col-xl-5"></th>
-                        <th class="col-xl-5 table-text ">Ort</th>
+                        <th class=" table-text">Lehrbetrieb</th>
+                        <th class=""></th>
+                        <th class=" table-text ">Ort</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                     <tr onclick="window.location='profilebasic.html'">
                         <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class="align-middle table-text">stay smart</td>
-                        <td class="align-middle table-text">8606 Greifensee</td>
+                        <td class=" table-text">stay smart</td>
+                        <td class=" table-text">8606 Greifensee</td>
 
                     </tr>
                 </tbody>
