--- a/profilepro.html
+++ b/profilepro.html
@@ -68,7 +68,7 @@
             <div class="col-xl-4 containertest d-flex flex-row-reverse">
 
                 <form class="form-inline my-2 my-lg-0">
-                    <a class="btn btn-primary mx-2 btn-lg" href="https://www.lehrmesse.ch" role="button">Webseite</a>
+                    <a id="website" class="btn btn-primary mx-2 btn-lg" href="" role="button">Webseite</a>
 
                     <div class="btn-group">
                         <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
