added contactpersons and video :rocket:

--- a/profilepro.html
+++ b/profilepro.html
@@ -109,7 +109,7 @@
             <div class="col-xl-1 bg-body"></div>
             <div class="col-xl-5  p-5 containertest">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item mb-2" src="https://www.youtube.com/embed/q5xvL4mC-nE" allowfullscreen></iframe>
+                    <iframe id="video" class="embed-responsive-item mb-2" src="" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-xl-5 containertest p-5">
@@ -122,28 +122,7 @@
             <div class="col-xl-1 bg-body"></div>
             <div class="col-xl-5  p-5 containertest">
                 <h1 class="mb-3"> Ansprechspersonen </h1>
-                <div class="row">
-                    <div class="col-xl-6">
-                        <img src="img/person1.jpg" class="rounded mx-auto d-block" alt="..." height="282px" width="188px">
-                        <div class="rounded mx-auto d-block">
-                            <p class=""><b>Martin Mustermann</b><br> Lehrlingsverantwortlicher
-                                <br> E-Mail : info@staysmart.ch <br> Tel: 044 00 00 00
-                            </p>
-                            <i class="fab fa-linkedin fa-2x"></i>
-                            <i class="fab fa-facebook-square fa-2x"><a href="https://www.lehrmesse.ch"></a></i>
-                            <i class="fas fa-envelope-open-text fa-2x"></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-6">
-                        <img src="img/person2.jpg" class="rounded mx-auto d-block" alt="..." height="282px" width="188px">
-                        <div class="rounded mx-auto d-block">
-                            <p class=""><b>Martina Musterfrau</b><br> HR Recuriting Manager<br> E-Mail : info@staysmart.ch <br> Tel: 044 00 00 00</p>
-                            <i class="fab fa-linkedin fa-2x"></i>
-                            <i class="fab fa-facebook-square fa-2x"></i>
-                            <i class="fas fa-envelope-open-text fa-2x"></i>
-                        </div>
-                    </div>
-
+                <div id="persons" class="row">
                 </div>
             </div>
             <div class="col-xl-5 containertest p-5">
