--- a/exhibitors.html
+++ b/exhibitors.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/v4-shims.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/v4-shims.css">
 
     <nav class="navbar navbar-expand-lg navbar-light bg ">
         <a class="navbar-brand text-light" href="#"><b>Aussteller Lehrmesse 2022</b></a>
@@ -32,7 +32,7 @@
                 <li class="nav-item active">
                     <a class="nav-link text-light" href="https://lehrmesse.ch">Lehrmesse </a>
                 </li>
-                
+
             </ul>
             <!--
                 <form class="form-inline my-2 my-lg-0">
@@ -48,6 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/exhibitorlist.js"></script>
 </head>
 
 </html>
@@ -57,7 +58,7 @@
         <div class="col-xl-1 bg-color"></div>
         <div class="col-xl-8 bg-color">
             <h1 class="m-5"> Aussteller </h1>
-            <h2 class="m-5"> Hauptsponsor </h2>
+
             <table class="table table-hover m-5">
                 <thead>
                     <tr>
@@ -68,113 +69,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr onclick="window.location='profilepro.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-                    </tr>
-
                 </tbody>
             </table>
-            <h2 class="m-5"> Co-Sponsoren </h2>
-            <table class="table table-hover m-5">
-                <thead>
-                    <tr >
-                        <th class=" table-text">Lehrbetrieb</th>
-                        <th class=""></th>
-                        <th class=" table-text ">Ort</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class="table-text">8606 Greifensee</td>
 
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class="table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class="table-text">8606 Greifensee</td>
-
-                    </tr>
-
-                </tbody>
-            </table>
-            
-            <!-- alle Aussteller -->
-            <h2 class="m-5"> Restliche Aussteller </h2>
-            <table class="table table-hover m-5">
-                <thead>
-                    <tr >
-                        <th class=" table-text">Lehrbetrieb</th>
-                        <th class=""></th>
-                        <th class=" table-text ">Ort</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                    <tr onclick="window.location='profilebasic.html'">
-                        <th scope="row"> <img src="img/sponsors/staysmart.png" class="img-thumbnail logos-small " alt="..."></th>
-                        <td class=" table-text">stay smart</td>
-                        <td class=" table-text">8606 Greifensee</td>
-
-                    </tr>
-                </tbody>
-            </table>
         </div>
         <div class="col-xl-1 bg-color"></div>
         <div class="col-xl-1 bg-body"></div>
